[package]
name = "DeltaTime"
version = "0.1.0"
description = "Experimental Rust Gamething"
authors = ["Bennett Harnisch <bennettharnisch@gmail.com>"]
documentation = "https://github.com/Blacksmith-C/DeltaTime"
edition = "2021"

[dependencies]
    sdl2 = { git = "https://github.com/rust-sdl2/rust-sdl2" }
	
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html